--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -12,45 +12,53 @@
   width: 260px;
   height: 100%;
   max-height: 100%;
-  background-color: #FFF;
+  background-color: #1c2331;
   box-shadow: 0 16px 38px -12px rgba(0,0,0,.56), 0 4px 25px 0 rgba(0,0,0,.12), 0 8px 10px -5px rgba(0,0,0,.2);
 }
 .fa-tachometer-alt {
-  color: #fbe717;
+  color: #2bbbad;
 }
 .fa-money-bill-alt {
-  color: #fbe717;
+  color: #2bbbad;
 }
 .fa-users {
-  color: #fbe717;
+  color: #2bbbad;
 }
 .fa-home {
-  color: #fbe717;
+  color: #2bbbad;
 }
 .fa-chart-bar {
-  color: #fbe717;
+  color: #2bbbad;
 }
 .fa-file-alt {
-  color: #fbe717;
+  color: #2bbbad;
 }
+.fa-expand-arrows-alt{
+  color: #ffffff;
+}
+.fa-sign-out-alt{
+  color: #ffffff;
+}
+
 .sidebar .logo-sidebar{
   position: relative;
   text-align: center;
+  height: auto;
   display: block;
-  margin: 0;
+  margin: 0px;
   border-bottom-color: #13313f;
   padding: 10px 2px 10px 2px;
-  background-color: #fff;
+  background-color: #ffffff;
 }
 .sidebar .logo-sidebar img{
-  max-width: 180px;
+  max-width: 120px;
   -webkit-transition: all 200ms ease-in;
   -moz-transition: all 200ms ease-in;
   -o-transition: all 200ms ease-in;
   -ms-transition: all 200ms ease-in;
   transition: all 200ms ease-in;
 }
-.sidebar .logo-sidebar img.logo-mini{ display: none; max-height: 38px;}
+.sidebar .logo-sidebar img.logo-mini{ display: none; max-height: 30px;}
 /*toggle imgs*/
 .sidebar .logo-sidebar img.logo-main.none  { display: none;}
 .sidebar .logo-sidebar img.logo-mini.inline{ display: inline; max-width: 50px;}
@@ -87,7 +95,7 @@ outline: none !important;
   outline: 0;
   padding: 16px 0 16px 0px;
   font-weight: 400;
-   color: #0b0b0b;
+   color: #ffffff;
   -webkit-transition: all 200ms ease-in;
   -moz-transition: all 200ms ease-in;
   -o-transition: all 200ms ease-in;
@@ -106,11 +114,11 @@ outline: none !important;
 }
 .sidebar #leftside-navigation ul li a:hover,
 .sidebar #leftside-navigation ul li a:hover i.arrow{
-color: #2980b9;
+color: #2bbbad;
 text-decoration: none;
 }
 .sidebar #leftside-navigation ul li a:hover{
-  background-color: #74b9ff;
+  background-color: #f2f4f866;
 }
 
 .sidebar #leftside-navigation ul li a span.link{
@@ -129,7 +137,7 @@ width: 60%;
   width: 10%;
   text-align: center;
   font-size: 18px;
-  color: #98a6ad;
+  color: #2bbbad;
 -webkit-transform: translate(0, 0);
   -ms-transform: translate(0, 0);
   -o-transform: translate(0, 0);
@@ -142,18 +150,18 @@ width: 60%;
 
 /* nivel 2 */
 .sidebar #leftside-navigation ul ul     { display: none;}
-.sidebar #leftside-navigation ul ul li  { background-color: #fff;}
+.sidebar #leftside-navigation ul ul li  { background-color: #293346;}
 .sidebar #leftside-navigation ul ul li a{
 padding: 10px 20px 10px 45px;
 font-size: 13px;
 font-family: "Roboto", sans-serif;
   letter-spacing: 1px;
-color: #0b0b0b;
+color: #ffffff;
 }
 
 /* nivel 3 */
 .sidebar #leftside-navigation ul ul ul     { display: none;}
-.sidebar #leftside-navigation ul ul ul li  { background: #fff;}
+.sidebar #leftside-navigation ul ul ul li  { background: #293346;}
 .sidebar #leftside-navigation ul ul ul li a{
 padding: 10px 20px 10px 60px;
 font-size: 11px;
@@ -164,7 +172,7 @@ color: #aeb2b7;
 .sidebar #leftside-navigation ul ul li:hover { background-color: transparent;}
 
 .sidebar #leftside-navigation ul ul li a:hover,
-.sidebar #leftside-navigation ul ul ul li a:hover{ background-color: #fff;}
+.sidebar #leftside-navigation ul ul ul li a:hover{ background-color: rgba(0, 0, 0, 0.3);}
 
 
 .sidebar #leftside-navigation ul li.active ul { display: block;}
@@ -174,7 +182,7 @@ color: #aeb2b7;
 
 .sidebar #leftside-navigation ul li a.current{
   color: #fff;
-  background-color: #74b9ff;
+  background-color: #f2f4f866;
 }
 
 .count-info-sidebar {
@@ -260,7 +268,7 @@ body {
     font-size: 16px;
     font-family: 'Roboto', sans-serif;
     word-wrap: break-word;
-	background-color: #f2f4f8;
+	background-color: #f7f9fb;
 }
 
 .container{ max-width: 1170px;}
@@ -314,7 +322,7 @@ body {
     right: 0;
     z-index: 999;
     height: 60px;
-    background-color: #eee;
+    background-color: #2bbbad;
     box-shadow: 0 1px 2px rgba(0,0,0,.15);
 }
 
@@ -823,4 +831,12 @@ a:hover{ color: #0080A5;}
 	-o-transform: scale(1.1, 1.1);
 	-ms-transform: scale(1.1, 1.1);
 	transform: scale(1.1, 1.1)
+}
+.clear{
+clear: both;
+display: block;
+overflow: hidden;
+visibility: hidden;
+width: 0;
+height: 0;
 }
