--- a/app/views/dashboard/index.njk
+++ b/app/views/dashboard/index.njk
@@ -15,7 +15,7 @@
     	 <div class="breadcrumb">
 			   <div class="container-fluid">
 		    	   <div class="bread-nav">
-               <a class="breadcrumb-item" href="./dashboard">Principal</a>
+               <a class="breadcrumb-item" href="./dashboard">Menu Principal</a>
                <a class="breadcrumb-item active">Dashboard</a>
 						 </div>
 					</div><!-- .container-fluid -->
