--- a/app/views/includes/sideBar.njk
+++ b/app/views/includes/sideBar.njk
@@ -10,7 +10,7 @@
 	<div id="leftside-navigation">
 		<ul>
 			<li>
-				<a class="waves-btn-hover" href="/app/dashboard">
+				<a class="waves-btn-hover current" href="/app/dashboard">
 					<i class="fas fa-tachometer-alt" title="Dashboard" aria-hidden="true"></i>
 					<span class="link">Dashboard</span>
 				</a>
