--- a/app/views/modulos/celulas/cadastro.njk
+++ b/app/views/modulos/celulas/cadastro.njk
@@ -15,7 +15,8 @@
     	 <div class="breadcrumb">
 			   <div class="container-fluid">
 		    	   <div class="bread-nav">
-               <a class="breadcrumb-item" href="./dashboard">Células</a>
+               <a class="breadcrumb-item" href="/app/dashboard">Menu Principal</a>
+               <a class="breadcrumb-item" href="#">Células</a>
                <a class="breadcrumb-item active">Cadastro</a>
 						 </div>
 					</div><!-- .container-fluid -->
