--- a/app/public/css/bootstrap.css
+++ b/app/public/css/bootstrap.css
@@ -1996,6 +1996,8 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
 }
 
 .form-row {
+  position: relative;
+  zoom: 1;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
