--- a/app/views/modulos/pessoas/form_membros.njk
+++ b/app/views/modulos/pessoas/form_membros.njk
@@ -106,12 +106,10 @@
           <input type="text" class="form-control" data-autocomplete-neighborhood name="bairro" id="bairro" required>
           <div class="invalid-feedback">Por favor informe seu bairro.</div>
         </div>
-
-        <div class="clear-fix">
-        <button type="submit" class="btn btn-primary btn-sm">Salvar</button>
-        </div>
-
     </div>
+
+        <div class="clear"></div>
+        <button type="submit" class="btn btn-right btn-default">Salvar</button>
   </fieldset>
 </form>
 
