--- a/app/views/modulos/pessoas/form_membros.njk
+++ b/app/views/modulos/pessoas/form_membros.njk
@@ -109,7 +109,7 @@
     </div>
 
         <div class="clear"></div>
-        <button type="submit" class="btn btn-right btn-default">Salvar</button>
+        <button type="submit" class="btn btn-right btn-primary">Salvar</button>
   </fieldset>
 </form>
 
