--- a/app/views/modulos/celulas/form_celulas.njk
+++ b/app/views/modulos/celulas/form_celulas.njk
@@ -121,7 +121,7 @@
       </div>
 
         <div class="clear"></div>
-        <button type="submit" class="btn btn-right btn-default">Salvar</button>
+        <button type="submit" class="btn btn-right btn-primary">Salvar</button>
 
   </fieldset>
 </form>
