--- a/app/public/css/bootstrap.css
+++ b/app/public/css/bootstrap.css
@@ -60,8 +60,8 @@ article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, s
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  font-size: 1rem;
+  font-family: -apple-system, BlinkMacSystemFont, "Roboto", sans-serif;
+  font-size: 14px;
   font-weight: 400;
   line-height: 1.5;
   color: #212529;
@@ -232,7 +232,10 @@ th {
 
 label {
   display: inline-block;
-  margin-bottom: 0.5rem;
+  margin-bottom: 1.5px;
+  font-weight: 400;
+  color:#1c2331;
+  ;
 }
 
 button {
@@ -1826,7 +1829,7 @@ pre code {
   display: block;
   width: 100%;
   padding: 0.375rem 0.75rem;
-  font-size: 1rem;
+  font-size: 14px;
   line-height: 1.5;
   color: #495057;
   background-color: #fff;
@@ -4967,8 +4970,9 @@ input[type="button"].btn-block {
 }
 
 .alert-danger {
-  color: #721c24;
+  color: #721c25;
   background-color: #f8d7da;
+  font-weight: bold;
   border-color: #f5c6cb;
 }
 
