--- a/app/views/modulos/pessoas/form_membros.njk
+++ b/app/views/modulos/pessoas/form_membros.njk
@@ -1,39 +1,58 @@
 <form class="needs-validation" novalidate>
   <fieldset>
-        <legend>Dados Pessoais</legend>
+    <legend>Dados Pessoais</legend>
+      <div class="form-row">
+        <div class="form-group col-md-2">
+           <label for="tipo">Tipo:</label>
+             <select name="tipo" class="form-control" required>
+               <option value="" disabled selected>Selecione</option>
+               <option value="1">Membro</option>
+               <option value="2">Visitante</option>
+            </select>
+            <div class="invalid-feedback">Por favor escolha um tipo.</div>
+        </div>
 
-        <div class="form-row">
+        <div class="form-group col-md-2">
+           <label for="celula">Célula:</label>
+             <select name="celula" class="form-control" required>
+               <option value="" disabled selected>Selecione</option>
+               <option value="1">C.I.A</option>
+               <option value="2">Maranata</option>
+               <option value="3">Metanóia</option>
+            </select>
+            <div class="invalid-feedback">Por favor escola uma célula.</div>
+        </div>
 
-          <div class="form-group col-md-4">
-            <label for="nome">Nome:</label>
-            <input type="text" class="form-control" name="nome" required>
-            <div class="invalid-feedback">Por favor digite seu nome.</div>
-          </div>
+        <div class="form-group col-md-4">
+          <label for="nome">Nome:</label>
+          <input type="text" class="form-control" name="nome" required>
+          <div class="invalid-feedback">Por favor informe seu nome.</div>
+        </div>
 
-          <div class="form-group col-md-4">
-            <label for="email">E-mail:</label>
-            <input type="email" class="form-control" name="email" required>
-                        <div class="invalid-feedback">Por favor digite seu email.</div>
-          </div>
+        <div class="form-group col-md-4">
+          <label for="email">E-mail:</label>
+          <input type="email" class="form-control" name="email" required>
+          <div class="invalid-feedback">Por favor informe seu email.</div>
+        </div>
+      </div>
 
-          <div class="form-group col-md-2">
-            <label for="email">Data de Nascimento:</label>
-            <input type="date" class="form-control" name="dtnascimento" required>
-            <div class="invalid-feedback">Por favor digite sua data de nascimento.</div>
-          </div>
+      <div class="form-row">
+        <div class="form-group col-md-2">
+          <label for="email">Data de Nascimento:</label>
+          <input type="date" class="form-control" name="dtnascimento" required>
+          <div class="invalid-feedback">Por favor informe sua data de nascimento.</div>
+        </div>
 
-          <div class="form-group col-md-2">
-            <label for="sexo">Sexo:</label>
+        <div class="form-group col-md-2">
+          <label for="sexo">Sexo:</label>
             <select name="sexo" class="form-control" required>
               <option value="" disabled selected>Selecione</option>
               <option value="1">Masculino</option>
               <option value="2">Feminino</option>
             </select>
           <div class="invalid-feedback">Por favor escolha seu sexo.</div>
-          </div>
         </div>
 
-      <div class="form-row">
         <div class="form-group col-md-2">
           <label for="estadocivil">Estado Civil:</label>
           <select name="estadocivil" class="form-control" required>
@@ -44,13 +63,13 @@
             <option value="4">Viuvo(a)</option>
             <option value="5">União Estável</option>
           </select>
-        <div class="invalid-feedback">Por favor escolha seu estado civil.</div>
+          <div class="invalid-feedback">Por favor escolha seu estado civil.</div>
         </div>
 
         <div class="form-group col-md-2">
           <label for="cpf">CPF:</label>
           <input type="text" class="form-control cpf" name="cpf">
-          <div class="invalid-feedback">Por favor digite seu CPF.</div>
+          <div class="invalid-feedback">Por favor informe seu CPF.</div>
         </div>
 
         <div class="form-group col-md-2">
@@ -64,7 +83,33 @@
           <input type="tel" class="form-control cel" name="celular" required>
           <div class="invalid-feedback">Por favor informe seu celular.</div>
         </div>
-      </div>
+     </div>
+
+     <div class="form-row">
+
+       <div class="form-group col-md-4">
+          <label for="discipulador">Discipulador:</label>
+            <select name="discipulador" class="form-control" required>
+              <option value="" disabled selected>Selecione</option>
+              <option value="1">Não tenho</option>
+              <option value="2">Henry</option>
+              <option value="3">Gilvando</option>
+            </select>
+          <div class="invalid-feedback">Por favor escolha seu discipulador.</div>
+        </div>
+
+       <div class="form-group col-md-4">
+          <label for="respvisitante">Responsável pelo Visitante:</label>
+            <select name="respvisitante" class="form-control" required>
+              <option value="" disabled selected>Selecione</option>
+              <option value="1">João</option>
+              <option value="2">Henry</option>
+              <option value="3">Gilvando</option>
+            </select>
+          <div class="invalid-feedback">Por favor escolha um responsável.</div>
+        </div>
+
+     </div>
   </fieldset>
 
   <fieldset>
@@ -105,6 +150,11 @@
           <label for="bairro">Bairro:</label>
           <input type="text" class="form-control" data-autocomplete-neighborhood name="bairro" id="bairro" required>
           <div class="invalid-feedback">Por favor informe seu bairro.</div>
+        </div>
+
+        <div class="form-group col-md-4">
+          <label for="complemento">Complemento:</label>
+          <input type="text" class="form-control" name="complemento">
         </div>
     </div>
 
