--- a/app/views/modulos/pessoas/form_membros.njk
+++ b/app/views/modulos/pessoas/form_membros.njk
@@ -5,10 +5,9 @@
         <div class="form-group col-md-2">
            <label for="tipomembroId">Tipo:</label>
              <select name="tipomembroId" class="form-control">
-               {% for membro in membros %}
-              <option value="" disabled selected>Selecione</option>
-              <option value="josé">{{ membro.nome }}</option>
-                {% endfor %}
+                <option value="" disabled selected>Selecione</option>
+                <option value="1">Membros</option>
+                <option value="1">Visitantes</option>
             </select>
 
             <div class="invalid-feedback">Por favor escolha um tipo.</div>
@@ -93,9 +92,9 @@
           <label for="discipuladorId">Discipulador:</label>
             <select name="discipuladorId" class="form-control" required>
               <option value="" disabled selected>Selecione</option>
-              <option value="1">Não tenho</option>
-              <option value="2">Henry</option>
-              <option value="3">Gilvando</option>
+            {% for membro in membros %}
+              <option value="{{ membro.id }}">{{ membro.nome }}</option>
+            {% endfor %}
             </select>
           <div class="invalid-feedback">Por favor escolha seu discipulador.</div>
         </div>
@@ -104,9 +103,9 @@
           <label for="respvisitanteId">Responsável pelo Visitante:</label>
             <select name="respvisitanteId" class="form-control">
               <option value="" disabled selected>Selecione</option>
-              {% for membro in membros %}
-              <option>{{ membro.nome }}</option>
-              {% endfor %}
+            {% for membro in membros %}
+              <option value="{{ membro.id }}">{{ membro.nome }}</option>
+            {% endfor %}
             </select>
           <div class="invalid-feedback">Por favor escolha um responsável.</div>
         </div>
