--- a/app/views/modulos/celulas/form_celulas.njk
+++ b/app/views/modulos/celulas/form_celulas.njk
@@ -8,10 +8,9 @@
         <label for="regiaoId">Região: </label>
         <select name="regiaoId" class="form-control" required>
           <option value="" disabled selected>Selecione</option>
-          <option value="regiaId">Laranja</option>
-          <option value="regiaId">Azul</option>
-          <option value="regiaId">Amarela</option>
-          <option value="regiaId">Vermelha</option>
+            {% for regiao in regioes %}
+              <option value="{{ regiao.id }}">{{ regiao.nome }}</option>
+            {% endfor %}
         </select>
         <div class="invalid-feedback">Por favor escolha uma região.</div>
       </div>
@@ -20,10 +19,9 @@
         <label for="tipocelulaId">Tipo de Célula:</label>
         <select name="tipocelulaId" class="form-control" required>
           <option value="" disabled selected>Selecione</option>
-          <option value="tipocelulaId">Jovens</option>
-          <option value="tipocelulaId">Crianças</option>
-          <option value="tipocelulaId">Adolescentes</option>
-          <option value="tipocelulaId">Adultos</option>
+            {% for tiposcelula in tiposcelulas %}
+              <option value="{{ tiposcelula.id }}">{{ tiposcelula.nome }}</option>
+            {% endfor %}
         </select>
         <div class="invalid-feedback">Por favor escolha um tipo de célula.</div>
       </div>
@@ -75,8 +73,9 @@
         <label for="lider">Líder Principal:</label>
         <select name="lider" class="form-control" required>
           <option value="" disabled selected>Selecione</option>
-          <option value="membroId">Henry Junior</option>
-          <option value="membroId">Christian Max</option>
+            {% for membro in membros %}
+              <option value="{{ membro.id }}">{{ membro.nome }}</option>
+            {% endfor %}
         </select>
         <div class="invalid-feedback">Por favor escolha um líder.</div>
       </div>
@@ -85,8 +84,9 @@
         <label for="lidertr1">Líder em Treinamento 1:</label>
         <select name="lidertr1" class="form-control" required>
           <option value="" disabled selected>Selecione</option>
-          <option value="membroId">Henry Junior</option>
-          <option value="membroId">Christian Max</option>
+            {% for membro in membros %}
+              <option value="{{ membro.id }}">{{ membro.nome }}</option>
+            {% endfor %}
         </select>
         <div class="invalid-feedback">Por favor escolha um líder em treinamento.</div>
       </div>
@@ -95,8 +95,9 @@
         <label for="lidertr2">Líder em Treinamento 2:</label>
         <select name="lidertr2" class="form-control" required>
           <option value="" disabled selected>Selecione</option>
-          <option value="membroId">Henry Junior</option>
-          <option value="membroId">Christian Max</option>
+            {% for membro in membros %}
+              <option value="{{ membro.id }}">{{ membro.nome }}</option>
+            {% endfor %}
         </select>
         <div class="invalid-feedback">Por favor escolha um líder em treinamento.</div>
       </div>
@@ -105,8 +106,9 @@
         <label for="lidertr3">Líder em Treinamento 3:</label>
         <select name="lidertr3" class="form-control" required>
           <option value="" disabled selected>Selecione</option>
-          <option value="membroId">Henry Junior</option>
-          <option value="membroId">Christian Max</option>
+            {% for membro in membros %}
+              <option value="{{ membro.id }}">{{ membro.nome }}</option>
+            {% endfor %}
         </select>
         <div class="invalid-feedback">Por favor escolha um líder em treinamento.</div>
       </div>
@@ -115,8 +117,9 @@
         <label for="lidertr4">Líder em Treinamento 4:</label>
         <select name="lidertr4" class="form-control" required>
           <option value="" disabled selected>Selecione</option>
-          <option value="membroId">Henry Junior</option>
-          <option value="membroId">Christian Max</option>
+            {% for membro in membros %}
+              <option value="{{ membro.id }}">{{ membro.nome }}</option>
+            {% endfor %}
         </select>
         <div class="invalid-feedback">Por favor escolha um líder em treinamento.</div>
       </div>
@@ -125,8 +128,9 @@
         <label for="supervisor">Supervisor:</label>
         <select name="supervisor" class="form-control" required>
           <option value="" disabled selected>Selecione</option>
-          <option value="membroId">Henry Junior</option>
-          <option value="membroId">Christian Max</option>
+            {% for membro in membros %}
+              <option value="{{ membro.id }}">{{ membro.nome }}</option>
+            {% endfor %}
         </select>
         <div class="invalid-feedback">Por favor escolha um supervisor.</div>
       </div>
@@ -135,8 +139,9 @@
         <label for="secretario">Secretário:</label>
         <select name="secretario" class="form-control" required>
           <option value="" disabled selected>Selecione</option>
-          <option value="membroId">Isabelle Pedrosa</option>
-          <option value="membroId">Gilma Mendes</option>
+            {% for membro in membros %}
+              <option value="{{ membro.id }}">{{ membro.nome }}</option>
+            {% endfor %}
         </select>
         <div class="invalid-feedback">Por favor escolha um secretário.</div>
       </div>
@@ -145,8 +150,9 @@
         <label for="intercessor">Intercessor:</label>
         <select name="intercessor" class="form-control" required>
           <option value="" disabled selected>Selecione</option>
-          <option value="membroId">Renan Bessa</option>
-          <option value="membroId">Gilma Mendes</option>
+            {% for membro in membros %}
+              <option value="{{ membro.id }}">{{ membro.nome }}</option>
+            {% endfor %}
         </select>
         <div class="invalid-feedback">Por favor escolha um intercessor.</div>
       </div>
@@ -155,8 +161,9 @@
         <label for="respcom">Responsavél pela Comunhão:</label>
         <select name="respcom" class="form-control" required>
           <option value="" disabled selected>Selecione</option>
-          <option value="membroId">Renan Bessa</option>
-          <option value="membroId">Gilma Mendes</option>
+            {% for membro in membros %}
+              <option value="{{ membro.id }}">{{ membro.nome }}</option>
+            {% endfor %}
         </select>
         <div class="invalid-feedback">Por favor escolha um responsavél.</div>
       </div>
@@ -165,8 +172,9 @@
         <label for="resporg">Responsavél pela Organização:</label>
         <select name="resporg" class="form-control" required>
           <option value="" disabled selected>Selecione</option>
-          <option value="membroId">Renan Bessa</option>
-          <option value="membroId">Gilma Mendes</option>
+            {% for membro in membros %}
+              <option value="{{ membro.id }}">{{ membro.nome }}</option>
+            {% endfor %}
         </select>
         <div class="invalid-feedback">Por favor escolha um responsavél.</div>
       </div>
@@ -175,8 +183,9 @@
         <label for="resplouv">Responsavél pela Louvor:</label>
         <select name="resplouv" class="form-control" required>
           <option value="" disabled selected>Selecione</option>
-          <option value="membroId">Renan Bessa</option>
-          <option value="membroId">Gilma Mendes</option>
+            {% for membro in membros %}
+              <option value="{{ membro.id }}">{{ membro.nome }}</option>
+            {% endfor %}
         </select>
         <div class="invalid-feedback">Por favor escolha um responsavél.</div>
       </div>
@@ -185,8 +194,9 @@
         <label for="respdina">Responsavél pela Dinâmica:</label>
         <select name="respdina" class="form-control" required>
           <option value="" disabled selected>Selecione</option>
-          <option value="membroId">Renan Bessa</option>
-          <option value="membroId">Gilma Mendes</option>
+            {% for membro in membros %}
+              <option value="{{ membro.id }}">{{ membro.nome }}</option>
+            {% endfor %}
         </select>
         <div class="invalid-feedback">Por favor escolha um responsavél.</div>
       </div>
@@ -206,31 +216,31 @@
 
       <div class="form-group col-md-2">
         <label for="estado">Estado:</label>
-        <input type="text" class="form-control estado" data-autocomplete-state name="estado" id="estado" required>
+        <input type="text" class="form-control estado" data-autocomplete-state name="estado" id="estado" readonly required>
         <div class="invalid-feedback">Por favor informe seu estado.</div>
       </div>
 
       <div class="form-group col-md-3">
         <label for="cidade">Cidade:</label>
-        <input type="text" class="form-control" data-autocomplete-city name="cidade" id="cidade" required>
+        <input type="text" class="form-control" data-autocomplete-city name="cidade" id="cidade" readonly required>
         <div class="invalid-feedback">Por favor informe sua cidade.</div>
       </div>
 
       <div class="form-group col-md-5">
         <label for="logradouro">Logradouro:</label>
-        <input type="text" class="form-control" data-autocomplete-address name="logradouro" id="endereco" required>
+        <input type="text" class="form-control" data-autocomplete-address name="logradouro" id="endereco" readonly required>
         <div class="invalid-feedback">Por favor informe seu endereço.</div>
       </div>
 
       <div class="form-group col-md-2">
         <label for="numero">Número:</label>
-        <input type="text" class="form-control" name="numero" required>
+        <input type="text" class="form-control" name="numero"  required>
         <div class="invalid-feedback">Por favor informe o número de seu endereço.</div>
       </div>
 
       <div class="form-group col-md-2">
         <label for="bairro">Bairro:</label>
-        <input type="text" class="form-control" data-autocomplete-neighborhood name="bairro" id="bairro" required>
+        <input type="text" class="form-control" data-autocomplete-neighborhood name="bairro" id="bairro" readonly required>
         <div class="invalid-feedback">Por favor informe seu bairro.</div>
       </div>
 
